--- a/index.html
+++ b/index.html
@@ -56,22 +56,23 @@
                                     d="M4 6h16M4 12h16M4 18h7" />
                             </svg>
                         </label>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 w-52">
+                        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 w-52">
                             <li><a>Home</a></li>
                             <li><a>About Us</a></li>
                             <li><a>Shop</a></li>
                             <li><a>All Fruits</a></li>
                         </ul>
-                        <div class="lg:hidden dropdown-content z-[1] mt-36 shadow bg-base-100 rounded-box flex items-center md:space-x-4">
+                        <div
+                            class="lg:hidden dropdown-content z-[1] mt-36 shadow bg-base-100 rounded-box flex items-center md:space-x-4">
                             <div class="relative">
                                 <span class="absolute inset-y-0 right-6 flex items-center pl-2 w-3">
                                     <button type="submit" title="Search" class="p-1 ">
                                         <i class="fa-solid fa-magnifying-glass"></i>
                                     </button>
                                 </span>
-                                <input type="search" name="Search" placeholder="Search here" class="w-44 py-2 pl-4 text-sm rounded-md sm:w-auto">
-                            </div>                    
+                                <input type="search" name="Search" placeholder="Search here"
+                                    class="w-44 py-2 pl-4 text-sm rounded-md sm:w-auto">
+                            </div>
                         </div>
                     </div>
                     <ul tabindex="0"
@@ -86,27 +87,225 @@
                     <img class="w-16 h-12" src="./images/logo.png" alt="">
                     <h3 class="text-4xl font-bold pl-2 text-black md:text-black lg:text-white">Fruit Burst</h3>
                 </div>
-                <div class="navbar-end rounded-full flex items-center sd:invisible md:invisible lg:visible">
+                <div class="navbar-end rounded-full mr-4 flex items-center sd:invisible md:invisible lg:visible">
                     <div class="relative">
                         <span class="absolute inset-y-0 right-6 flex items-center pl-2 w-3">
                             <button type="submit" title="Search" class="p-1 ">
                                 <i class="fa-solid fa-magnifying-glass"></i>
                             </button>
                         </span>
-                        <input type="search" name="Search" placeholder="Search here" class="w-44 py-2 pl-4 text-sm rounded-full sm:w-auto">
-                    </div>                    
+                        <input type="search" name="Search" placeholder="Search here"
+                            class="w-48 py-2 pl-4 text-sm rounded-full sm:w-auto">
+                    </div>
                 </div>
 
-                </div>
+            </div>
             </div>
 
         </nav>
 
-        
+        <section>
+            <div class="carousel w-full z-[12]">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="./images/banner1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="./images/banner2.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="./images/banner3.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="./images/banner4.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="min-w-min h-80 ">
+            <div class="flex bg-red-600 justify-center -mt-36 z-[99] items-center gap-9">
+                <div class="bg-white">
+                    <img src="./images/fruit1.png" alt="">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
+                    <dialog id="my_modal_1" class="modal justify-center">
+                        <form method="dialog" class="modal-box">
+                            <div class="card w-auto ">
+                                <figure class="px-10 pt-10">
+                                  <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+                                </figure>
+                                <div class="card-body items-center text-center">
+                                  <h2 class="card-title">Red Dragon</h2>
+                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                  <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="modal-action justify-center">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <div class="join join-horizontal lg:join-horizontal gap-3">
+                                    <button class="btn join-item">close</button>
+                                    <button class="btn join-item bg-pri-color">Buy Now</button>
+                                </div>
+                            </div>
+                        </form>
+                    </dialog>
+                </div>
+                <div>
+                    <img src="./images/fruit1.png" alt="">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
+                    <dialog id="my_modal_1" class="modal justify-center">
+                        <form method="dialog" class="modal-box">
+                            <div class="card w-auto ">
+                                <figure class="px-10 pt-10">
+                                  <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+                                </figure>
+                                <div class="card-body items-center text-center">
+                                  <h2 class="card-title">Red Dragon</h2>
+                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                  <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="modal-action justify-center">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <div class="join join-horizontal lg:join-horizontal gap-3">
+                                    <button class="btn join-item">close</button>
+                                    <button class="btn join-item bg-pri-color">Buy Now</button>
+                                </div>
+                            </div>
+                        </form>
+                    </dialog>
+                </div>
+                <div>
+                    <img src="./images/fruit1.png" alt="">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
+                    <dialog id="my_modal_1" class="modal justify-center">
+                        <form method="dialog" class="modal-box">
+                            <div class="card w-auto ">
+                                <figure class="px-10 pt-10">
+                                  <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+                                </figure>
+                                <div class="card-body items-center text-center">
+                                  <h2 class="card-title">Red Dragon</h2>
+                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                  <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="modal-action justify-center">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <div class="join join-horizontal lg:join-horizontal gap-3">
+                                    <button class="btn join-item">close</button>
+                                    <button class="btn join-item bg-pri-color">Buy Now</button>
+                                </div>
+                            </div>
+                        </form>
+                    </dialog>
+                </div>
+                <div>
+                    <img src="./images/fruit1.png" alt="">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
+                    <dialog id="my_modal_1" class="modal justify-center">
+                        <form method="dialog" class="modal-box">
+                            <div class="card w-auto ">
+                                <figure class="px-10 pt-10">
+                                  <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+                                </figure>
+                                <div class="card-body items-center text-center">
+                                  <h2 class="card-title">Red Dragon</h2>
+                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                  <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="modal-action justify-center">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <div class="join join-horizontal lg:join-horizontal gap-3">
+                                    <button class="btn join-item">close</button>
+                                    <button class="btn join-item bg-pri-color">Buy Now</button>
+                                </div>
+                            </div>
+                        </form>
+                    </dialog>
+                </div>
+                <div>
+                    <img src="./images/fruit1.png" alt="">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
+                    <dialog id="my_modal_1" class="modal justify-center">
+                        <form method="dialog" class="modal-box">
+                            <div class="card w-auto ">
+                                <figure class="px-10 pt-10">
+                                  <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+                                </figure>
+                                <div class="card-body items-center text-center">
+                                  <h2 class="card-title">Red Dragon</h2>
+                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                  <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="modal-action justify-center">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <div class="join join-horizontal lg:join-horizontal gap-3">
+                                    <button class="btn join-item">close</button>
+                                    <button class="btn join-item bg-pri-color">Buy Now</button>
+                                </div>
+                            </div>
+                        </form>
+                    </dialog>
+                </div>
+                
+            </div>
+        </section>
 
     </header>
 
     <main>
+
 
     </main>
 
