--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
         </nav>
 
-        <section>
-            <div class="carousel w-full z-[12]">
+        <section class=" mx-0 lg:mx-36">
+            <div class="carousel w-full ">
                 <div id="slide1" class="carousel-item relative w-full">
                     <img src="./images/banner1.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -136,12 +136,12 @@
                 </div>
             </div>
         </section>
-        <section class="min-w-min h-80 ">
-            <div class="flex bg-red-600 justify-center -mt-36 z-[99] items-center gap-9">
-                <div class="bg-white">
+        <section class="absolute justify-center px-0 lg:px-32 z-[12] mx-0 lg:mx-36 h-auto lg:h-16 lg:-mt-24 shadow-lg">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 bg-white justify-center z-[99] items-center">
+                <div class="bg-white mr-9 text-center">
                     <img src="./images/fruit1.png" alt="">
                     <!-- Open the modal using ID.showModal() method -->
-                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
+                    <button class="btn mt-2" onclick="my_modal_1.showModal()">Grape</button>
                     <dialog id="my_modal_1" class="modal justify-center">
                         <form method="dialog" class="modal-box">
                             <div class="card w-auto ">
@@ -170,11 +170,75 @@
                         </form>
                     </dialog>
                 </div>
-                <div>
-                    <img src="./images/fruit1.png" alt="">
+                <div class="bg-white mr-9 text-center">
+                    <img src="./images/fruit2.png" alt="">
                     <!-- Open the modal using ID.showModal() method -->
-                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
-                    <dialog id="my_modal_1" class="modal justify-center">
+                    <button class="btn mt-2" onclick="my_modal_2.showModal()">Grape</button>
+                    <dialog id="my_modal_2" class="modal justify-center">
+                        <form method="dialog" class="modal-box">
+                            <div class="card w-auto ">
+                                <figure class="px-10 pt-10">
+                                  <img src="./images/fruit6.png" alt="Red Dragon" class="rounded-xl" />
+                                </figure>
+                                <div class="card-body items-center text-center">
+                                  <h2 class="card-title">Red Dragon</h2>
+                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                  <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="modal-action justify-center">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <div class="join join-horizontal lg:join-horizontal gap-3">
+                                    <button class="btn join-item">close</button>
+                                    <button class="btn join-item bg-pri-color">Buy Now</button>
+                                </div>
+                            </div>
+                        </form>
+                    </dialog>
+                </div>
+                <div class="bg-white mr-9 text-center">
+                    <img src="./images/fruit3.png" alt="">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn mt-2" onclick="my_modal_3.showModal()">Grape</button>
+                    <dialog id="my_modal_3" class="modal justify-center">
+                        <form method="dialog" class="modal-box">
+                            <div class="card w-auto ">
+                                <figure class="px-10 pt-10">
+                                  <img src="./images/fruit7.png" alt="Red Dragon" class="rounded-xl" />
+                                </figure>
+                                <div class="card-body items-center text-center">
+                                  <h2 class="card-title">Red Dragon</h2>
+                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                  <div class="rating">
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="modal-action justify-center">
+                                <!-- if there is a button in form, it will close the modal -->
+                                <div class="join join-horizontal lg:join-horizontal gap-3">
+                                    <button class="btn join-item">close</button>
+                                    <button class="btn join-item bg-pri-color">Buy Now</button>
+                                </div>
+                            </div>
+                        </form>
+                    </dialog>
+                </div>
+                <div class="bg-white mr-9 text-center">
+                    <img src="./images/fruit4.png" alt="">
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn mt-2" onclick="my_modal_4.showModal()">Grape</button>
+                    <dialog id="my_modal_4" class="modal justify-center">
                         <form method="dialog" class="modal-box">
                             <div class="card w-auto ">
                                 <figure class="px-10 pt-10">
@@ -202,79 +266,15 @@
                         </form>
                     </dialog>
                 </div>
-                <div>
-                    <img src="./images/fruit1.png" alt="">
+                <div class="bg-white text-center">
+                    <img src="./images/fruit5.png" alt="">
                     <!-- Open the modal using ID.showModal() method -->
-                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
-                    <dialog id="my_modal_1" class="modal justify-center">
+                    <button class="btn mt-2" onclick="my_modal_5.showModal()">Grape</button>
+                    <dialog id="my_modal_5" class="modal justify-center">
                         <form method="dialog" class="modal-box">
                             <div class="card w-auto ">
                                 <figure class="px-10 pt-10">
-                                  <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
-                                </figure>
-                                <div class="card-body items-center text-center">
-                                  <h2 class="card-title">Red Dragon</h2>
-                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                                  <div class="rating">
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                  </div>
-                                </div>
-                              </div>
-                            <div class="modal-action justify-center">
-                                <!-- if there is a button in form, it will close the modal -->
-                                <div class="join join-horizontal lg:join-horizontal gap-3">
-                                    <button class="btn join-item">close</button>
-                                    <button class="btn join-item bg-pri-color">Buy Now</button>
-                                </div>
-                            </div>
-                        </form>
-                    </dialog>
-                </div>
-                <div>
-                    <img src="./images/fruit1.png" alt="">
-                    <!-- Open the modal using ID.showModal() method -->
-                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
-                    <dialog id="my_modal_1" class="modal justify-center">
-                        <form method="dialog" class="modal-box">
-                            <div class="card w-auto ">
-                                <figure class="px-10 pt-10">
-                                  <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
-                                </figure>
-                                <div class="card-body items-center text-center">
-                                  <h2 class="card-title">Red Dragon</h2>
-                                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
-                                  <div class="rating">
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                  </div>
-                                </div>
-                              </div>
-                            <div class="modal-action justify-center">
-                                <!-- if there is a button in form, it will close the modal -->
-                                <div class="join join-horizontal lg:join-horizontal gap-3">
-                                    <button class="btn join-item">close</button>
-                                    <button class="btn join-item bg-pri-color">Buy Now</button>
-                                </div>
-                            </div>
-                        </form>
-                    </dialog>
-                </div>
-                <div>
-                    <img src="./images/fruit1.png" alt="">
-                    <!-- Open the modal using ID.showModal() method -->
-                    <button class="btn" onclick="my_modal_1.showModal()">Grape</button>
-                    <dialog id="my_modal_1" class="modal justify-center">
-                        <form method="dialog" class="modal-box">
-                            <div class="card w-auto ">
-                                <figure class="px-10 pt-10">
-                                  <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
+                                  <img src="./images/fruit9.png" alt="Red Dragon" class="rounded-xl" />
                                 </figure>
                                 <div class="card-body items-center text-center">
                                   <h2 class="card-title">Red Dragon</h2>
