why Choose us section created

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 </head>
 
-<body class="font-lato">
+<body class="font-loto">
 
     <header>
         <nav class="mx-auto lg:mx-36 mt-5 h-auto lg:h-36">
@@ -511,7 +511,7 @@
                     <div class="">
                         <h1 class="mb-5 text-5xl text-white font-bold">Meet the team section</h1>
                         <p class="mb-5 text-white mx-0 lg:mx-[300px]">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                        <div class="grid justify-around grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                        <div class="grid justify-around grid-cols-1 md:grid-cols-2 lg:grid-cols-4 ">
                             <!-- Card 1 -->
                             <div class="card">
                                 <figure class="px-10 pt-10">
@@ -641,7 +641,30 @@
         <!-- Meet the team Section Ends -->
 
         <!-- Why Choose Us Section starts -->
-        
+        <section class="font-loto">
+            <div>
+                <div>
+                    <div>
+                        <div >
+                            <div >
+                                <h2 class="text-5xl font-extrabold">Why Choose Us</h2>
+                                <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                            </div>
+                            <img src="./images/whychoose1.png" alt="">
+                            <div>
+                                <i class="fa-thin fa-users fa-2xl"></i>
+                                <div>
+                                    <h2 class="text-2xl font-extrabold">Dedicated Team</h2>
+                                    <div class="h-1 w-20 bg-black rounded"></div>
+                                    <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
     </main>
